--- a/index.html
+++ b/index.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"
-    />
-    <title>Telephone Number Validator</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main>
-      <img
-        class="freecodecamp-logo"
-        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
-        alt="freeCodeCamp Logo"
-      />
-      <h1>Telephone Number Validator</h1>
-      <div class="phone-container">
-        <div class="phone-background">
-          <div class="phone-camera"></div>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smartphone</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Telefone Number Validator</h1>
+    <div class="phone">
+        <div class="camera"></div>
+        <div class="screen">
+            <label for="user-input">Enter a valid phone number:</label>
+            <input type="text" id="user-input" name="phone-number" placeholder="(XX) XXXXX-XXXX">
+            <div class="buttons">
+                <button id="check-btn">Check</button>
+                <button id="clear-btn">Clear</button>
+            </div>
+            <div id="results-div hidden"></div>
         </div>
-        <label for="user-input">Enter a Phone Number:</label>
-        <input maxlength="20" type="text" id="user-input" value="" />
-        <div id="results-div"></div>
-        <div class="phone-footer">
-          <button class="btn-styles" id="check-btn">Check</button>
-          <button class="btn-styles" id="clear-btn">Clear</button>
-        </div>
-      </div>
-    </main>
-    <script src="script.js"></script>
-  </body>
+        <div class="home-button"></div>
+    </div>
+</body>
 </html>
